string, format, datatype, operator, list

--- a/day01/ex10-swapping.ipynb
+++ b/day01/ex10-swapping.ipynb
@@ -73,7 +73,8 @@
     "print(f\"num1 : {num1}, num2 : {num2}\")\n",
     "\n",
     "'''\n",
-    "변수 스와핑: 파이썬 스타일\n",
+    "변수 스와핑(swapping): 파이썬 스타일\n",
+    "언패킹(unpacking) = 패킹(packing)\n",
     "'''\n",
     "num1, num2 = num2, num1\n",
     "print(f\"num1 : {num1}, num2 : {num2}\")"
