dict, zip, for, bool, if, loop, random

--- a/day03/ex12-dict-method.ipynb
+++ b/day03/ex12-dict-method.ipynb
@@ -369,8 +369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4581164736 {'name': ['이순신', '안중근', '유관순'], 'age': [46, 30, 19], 'addr': ['동작구', '마포구', '종로구'], 'grade': [4, 3, 1]}\n",
-      "4584075712 {'name': ['이순신', '안중근', '유관순'], 'age': [46, 30, 19], 'addr': ['동작구', '마포구', '종로구'], 'grade': [4, 3, 1]}\n"
+      "4543717120 {'name': ['이순신', '안중근', '유관순'], 'age': [46, 30, 19], 'addr': ['동작구', '마포구', '종로구'], 'grade': [4, 3, 1]}\n",
+      "4615104512 {'name': ['이순신', '안중근', '유관순'], 'age': [46, 30, 19], 'addr': ['동작구', '마포구', '종로구'], 'grade': [4, 3, 1]}\n"
      ]
     }
    ],
@@ -387,18 +387,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4581458432 {'더조은': {'python': 3.5}, '아이티': {'python': 3.9}}\n",
-      "4585036096 {'더조은': {'python': 3.5}, '아이티': {'python': 3.9}}\n",
+      "4544599232 {'더조은': {'python': 3.5}, '아이티': {'python': 3.9}}\n",
+      "4544606656 {'더조은': {'python': 3.5}, '아이티': {'python': 3.9}}\n",
       "--------------------------------------------------\n",
-      "4581458432 {'더조은': {'python': 3.0}, '아이티': {'python': 3.9}}\n",
-      "4585036096 {'더조은': {'python': 3.5}, '아이티': {'python': 3.9}}\n"
+      "4544599232 {'더조은': {'python': 3.0}, '아이티': {'python': 3.9}}\n",
+      "4544606656 {'더조은': {'python': 3.0}, '아이티': {'python': 3.9}}\n",
+      "--------------------------------------------------\n",
+      "4544599232 {'더조은': {'python': 3.9}, '아이티': {'python': 3.9}}\n",
+      "4544606656 {'더조은': {'python': 3.0}, '아이티': {'python': 3.9}}\n"
      ]
     }
    ],
@@ -420,7 +423,16 @@
     "\n",
     "print('-' * 50)\n",
     "\n",
-    "versions1['더조은'] = {'python': 3.0}\n",
+    "# 얕은 복사\n",
+    "versions1['더조은']['python'] = 3.0\n",
+    "\n",
+    "print(id(versions1), versions1)\n",
+    "print(id(versions2), versions2)\n",
+    "\n",
+    "print('-' * 50)\n",
+    "\n",
+    "# 깊은 복사\n",
+    "versions1['더조은'] = {'python': 3.9}\n",
     "\n",
     "print(id(versions1), versions1)\n",
     "print(id(versions2), versions2)"
@@ -428,17 +440,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4544599232 {'더조은': {'python': 3.9}, '아이티': {'python': 3.9}}\n",
+      "4544597376 {'더조은': {'python': 3.9}, '아이티': {'python': 3.9}}\n",
+      "--------------------------------------------------\n",
+      "4544599232 {'더조은': {'python': 3.9}, '아이티': {'python': 3.9}}\n",
+      "4544597376 {'더조은': {'python': 3.1}, '아이티': {'python': 3.9}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 깊은 복사\n",
+    "import copy\n",
+    "versions2 = copy.deepcopy(versions1)\n",
+    "\n",
+    "print(id(versions1), versions1)\n",
+    "print(id(versions2), versions2)\n",
+    "\n",
+    "print('-' * 50)\n",
+    "\n",
+    "versions2['더조은']['python'] = 3.1\n",
+    "\n",
+    "print(id(versions1), versions1)\n",
+    "print(id(versions2), versions2)"
+   ]
   }
  ],
  "metadata": {
