file, built-in, function, class

--- a/day06/ex06-file.ipynb
+++ b/day06/ex06-file.ipynb
@@ -40,7 +40,7 @@
     "'''\n",
     "\n",
     "# 변수 = open(\"파일이름.확장자\", \"파일열기모드\", encoding=\"인코딩형식\")\n",
-    "file1 = open('newfile.txt', 'w', encoding='utf-8')\n",
+    "file1 = open('../dataset/newfile.txt', 'w', encoding='utf-8')\n",
     "\n",
     "for idx in range(1, 11):\n",
     "    data = f\"{idx} 번째 줄 입니다.\\n\"\n",
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "file2 = open('newfile.txt', 'r', encoding='utf-8')\n",
+    "file2 = open('../dataset/newfile.txt', 'r', encoding='utf-8')\n",
     "\n",
     "while True:\n",
     "    text_line = file2.readlines()\n",
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file3 = open('./newfile.txt', 'w', encoding='utf-8')\n",
+    "file3 = open('../dataset/newfile.txt', 'w', encoding='utf-8')\n",
     "\n",
     "for idx in range(1, 11):\n",
     "    data = f\"{idx} 번째 줄 입니다.\\n\"\n",
@@ -125,7 +125,7 @@
     }
    ],
    "source": [
-    "file4 = open('./newfile.txt', 'r', encoding='utf-8')\n",
+    "file4 = open('../dataset/newfile.txt', 'r', encoding='utf-8')\n",
     "\n",
     "while True:\n",
     "    text_line = file4.readlines()\n",
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file5 = open('basic_test.txt', 'w', encoding='utf-8')\n",
+    "file5 = open('../dataset/basic_test.txt', 'w', encoding='utf-8')\n",
     "file5.write('Hello python!!')\n",
     "file5.close()"
    ]
@@ -162,7 +162,7 @@
     }
    ],
    "source": [
-    "file6 = open('basic_test.txt', 'r', encoding='utf-8')\n",
+    "file6 = open('../dataset/basic_test.txt', 'r', encoding='utf-8')\n",
     "read_text = file6.read()\n",
     "print(read_text)\n",
     "file6.close()"
@@ -178,15 +178,70 @@
     "from random import *\n",
     "\n",
     "hangul = list('가나다라마바사아자차카타파하')\n",
-    "file7 = open('info.txt', 'w', encoding='utf-8')\n",
+    "file7 = open('../dataset/info.txt', 'w', encoding='utf-8')\n",
     "\n",
     "for i in range(30):\n",
-    "    name = choice(hangul) + choice(hangul)+ choice(hangul)\n",
+    "    name = choice(hangul) + choice(hangul) + choice(hangul)\n",
     "    weight = randrange(40, 100)\n",
     "    height = randrange(140, 200)\n",
     "    file7.write(f\"{name}, {weight}, {height}\\n\")\n",
     "\n",
     "file7.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "라타파, 78, 152\n",
+      "타아나, 95, 179\n",
+      "파타바, 97, 197\n",
+      "마카차, 52, 189\n",
+      "아라라, 99, 188\n",
+      "아라파, 66, 154\n",
+      "가가아, 74, 182\n",
+      "타파라, 41, 155\n",
+      "파바아, 81, 195\n",
+      "사바하, 81, 173\n",
+      "파아마, 50, 173\n",
+      "바자자, 46, 169\n",
+      "자카나, 58, 178\n",
+      "사다가, 77, 168\n",
+      "카차자, 76, 171\n",
+      "카라마, 40, 155\n",
+      "아하파, 49, 188\n",
+      "차사바, 70, 179\n",
+      "마바자, 92, 189\n",
+      "하가차, 46, 149\n",
+      "아사아, 50, 162\n",
+      "라다라, 75, 171\n",
+      "가라차, 53, 144\n",
+      "가아나, 50, 167\n",
+      "가사라, 55, 164\n",
+      "나파라, 84, 164\n",
+      "다다타, 54, 191\n",
+      "나아차, 72, 194\n",
+      "나타다, 95, 148\n",
+      "파타차, 64, 178\n"
+     ]
+    }
+   ],
+   "source": [
+    "file8 = open('../dataset/info.txt', 'r', encoding='utf-8')\n",
+    "\n",
+    "while True:\n",
+    "    text_line = file8.readlines()\n",
+    "    if not text_line:\n",
+    "        break\n",
+    "    for str1 in text_line:\n",
+    "        print(str1, end='')\n",
+    "\n",
+    "file8.close()"
    ]
   }
  ],
