--- a/exercise/chapter02.ipynb
+++ b/exercise/chapter02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 02 파이썬 기본 도구 익히기\n",
+    "# 실전 예제로 배우는 파이썬 프로그래밍\n",
     "\n",
     "## 제2장 연습문제"
    ]
@@ -45,9 +45,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "su 주소 : 4528335504\n",
-      "dan 주소 : 4585176560\n",
-      "금액 = 805\n"
+      "su 주소 : 4510046864\n",
+      "dan 주소 : 4566904752\n",
+      "금액 = 4000\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
     "\n",
     "print('su 주소 :', id(su))\n",
     "print('dan 주소 :', id(dan))\n",
-    "print('금액 =', su + dan)"
+    "print('금액 =', su * dan)"
    ]
   },
   {
